[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "streamlit-common-utils"
version = "0.1.0"
description = "Reusable utility functions for my Streamlit projects"
authors = [
    { name = "Kausik N", email = "nkausik1999@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy"
]

[project.optional-dependencies]
video = [ "opencv-python", "imageio", "Pillow" ]
csv = [ "pandas" ]

[tool.setuptools.packages.find]
where = ["."]